welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:6: error: type mismatch;
 found   : Unit
 required: Int
	if (d<=19 && d>=13) {k=k+1}
                              ^countTeen:6: error: type mismatch;
 found   : Unit
 required: Int
	if (d<=19 && d>=13) {k=k+1}
        ^