welcome.lessons.welcome.bat.bool1.CountTeen.scala.code
def countTeen(a:Int, b:Int,c:Int,d:Int): Int = {
	var k:Int = 0
	if (a<=19 && a>=13) {k=k+1}
	if (b<=19 && b>=13) {k=k+1}
	if (c<=19 && c>=13) {k=k+1}
	if (d<=19 && d>=13) {k=k+1}
}
